syntax = "proto3";
package umee.leverage.v1;

import "cosmos/base/v1beta1/coin.proto";
import "umee/leverage/v1/leverage.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/umee-network/umee/v3/x/leverage/types";

option (gogoproto.goproto_getters_all) = false;

// GenesisState defines the x/leverage module's genesis state.
message GenesisState {
  Params                  params             = 1 [(gogoproto.nullable) = false];
  repeated Token          registry           = 2 [(gogoproto.nullable) = false];
  repeated AdjustedBorrow adjusted_borrows   = 3 [(gogoproto.nullable) = false];
  repeated Collateral     collateral         = 4 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin reserves = 5 [
    (gogoproto.nullable)     = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  int64                   last_interest_time      = 6;
  repeated BadDebt        bad_debts               = 7 [(gogoproto.nullable) = false];
  repeated InterestScalar interest_scalars        = 8 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin utoken_supply = 9 [
    (gogoproto.nullable)     = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// AdjustedBorrow is a borrow struct used in the leverage module's genesis
// state.
message AdjustedBorrow {
  string                      address = 1;
  cosmos.base.v1beta1.DecCoin amount  = 2 [(gogoproto.nullable) = false];
}

// Collateral is a collateral struct used in the leverage module's genesis
// state.
message Collateral {
  string                   address = 1;
  cosmos.base.v1beta1.Coin amount  = 2 [(gogoproto.nullable) = false];
}

// BadDebt is a bad debt instance used in the leverage module's genesis state.
message BadDebt {
  string address = 1;
  string denom   = 2;
}

// InterestScalar is an interest scalar used in the leverage module's genesis
// state.
message InterestScalar {
  string denom  = 1;
  string scalar = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}
